--- a/Papers/SSBSE/homi.tex
+++ b/Papers/SSBSE/homi.tex
@@ -11,7 +11,7 @@
 
 \begin{document}
 
-\title{Searching Higher Order Mutation For Software Improvement}
+\title{Searching Higher Order Mutants For Software Improvement}
 
 \author{Author(s)
 %Fan Wu\inst{1}         \and
