--- a/Papers/SSBSE/ref.bib
+++ b/Papers/SSBSE/ref.bib
@@ -286,6 +286,63 @@ language={English}
  keywords = {GPGPU, SBSE, medicine, software engineering},
 }
 
+@ARTICLE{797969,
+author={Zitzler, E. and Thiele, L.},
+journal={IEEE Transactions on Evolutionary Computation},
+title={Multiobjective evolutionary algorithms: a comparative case study and the strength Pareto approach},
+year={1999},
+month={Nov},
+volume={3},
+number={4},
+}
+
+﻿@article {STVR:STVR1486,
+author = {Arcuri, Andrea and Briand, Lionel},
+title = {A Hitchhiker's guide to statistical tests for assessing randomized algorithms in software engineering},
+journal = {Software Testing, Verification and Reliability},
+volume = {24},
+number = {3},
+issn = {1099-1689},
+url = {http://dx.doi.org/10.1002/stvr.1486},
+doi = {10.1002/stvr.1486},
+pages = {219--250},
+keywords = {statistical difference, effect size, parametric test, nonparametric test, confidence interval, Bonferroni adjustment, systematic review, survey},
+year = {2014},
+}
+
+﻿@Inbook{Neumann2015,
+author="Neumann, Geoffrey
+and Harman, Mark
+and Poulding, Simon",
+editor="Barros, M{\'a}rcio
+and Labiche, Yvan",
+chapter="Transformed Vargha-Delaney Effect Size",
+title="Search-Based Software Engineering: 7th International Symposium, SSBSE 2015, Bergamo, Italy, September 5-7, 2015, Proceedings",
+year="2015",
+publisher="Springer International Publishing",
+address="Cham",
+pages="318--324",
+isbn="978-3-319-22183-0"
+}
+
+@inproceedings{Barr:2014:PSH:2635868.2635898,
+ author = {Barr, Earl T. and Brun, Yuriy and Devanbu, Premkumar and Harman, Mark and Sarro, Federica},
+ title = {The Plastic Surgery Hypothesis},
+ booktitle = {Proceedings of the 22Nd ACM SIGSOFT International Symposium on Foundations of Software Engineering},
+ series = {FSE 2014},
+ year = {2014},
+ isbn = {978-1-4503-3056-5},
+ location = {Hong Kong, China},
+ pages = {306--317},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2635868.2635898},
+ doi = {10.1145/2635868.2635898},
+ acmid = {2635898},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Software graftability, automated program repair, code reuse, empirical software engineering, mining software repositories},
+}
+
 
 
 
@@ -544,16 +601,6 @@ doi={10.1109/ICST.2010.30},}
  old_address = {Washington, DC, USA},
  keywords = {BLAS, code generation, high performance, linear algebra, optimization, tuning},
 } 
-
-@ARTICLE{797969,
-author={Zitzler, E. and Thiele, L.},
-journal={IEEE Transactions on Evolutionary Computation},
-title={Multiobjective evolutionary algorithms: a comparative case study and the strength Pareto approach},
-year={1999},
-month={Nov},
-volume={3},
-number={4},
-}
 
 @incollection{justyna2013,
 year={2014},
